entity_macros/tests/ui/derive/ent/unexpected-ent-attr-with-no-inner.stderr
error: Expected ent(...) attribute
  --> $DIR/unexpected-ent-attr-with-no-inner.rs:11:5
   |
11 |     #[ent]
   |     ^
